@@ -1,5 +1,6 @@
 0.08
  - Rewrite Encode::decode_utf8 to better Unicode::UTF8::decode_utf8.
+ - Update Module::Install to 1.21 version.
 
 0.07 2018-02-07T07:54:14+01:00
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
